--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile "com.squareup.picasso:picasso:2.5.2"
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
