--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-
+    compile 'jp.wasabeef:blurry:2.1.1'
 }
